data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4242.wast
;; 1. **Test Description:**    Test a `call_indirect` within deeply nested blocks (`block`) and loops (`loop`) to verify if the nested structure is correctly managed without prematurely exiting. The test should ensure that correct flow control is maintained across multiple nested levels.    - **Constraint Checked:** Correct nesting of control structures with `call_indirect`.    - **Mismanagement Relation:** Validates the correct handling of nested blocks without erroneous exits.

(assert_invalid
  (module
    (type (func (result i32)))
    (type (func (param i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param i32) (result i32)
      local.get 0
    )
    (func $test
      (block (loop (block (call_indirect (type 1) (i32.const 0) (i32.const 0)))))
    )
  )
  "type mismatch"
)